--- a/css/media.css
+++ b/css/media.css
@@ -816,6 +816,9 @@ main {
   }
 }
 @media (min-width: 102px) and (max-width: 768px) {
+  .contact-wrapper {
+    height: 10%;
+  }
   footer::before {
     background-size: 100% 100%;
     background-repeat: no-repeat;
