--- a/scss/media.scss
+++ b/scss/media.scss
@@ -981,6 +981,9 @@ main {
 }
 
 @media (min-width: 102px) and (max-width: 768px) {
+  .contact-wrapper {
+    height: 10%;
+  }
   footer{
     &::before{
       background-size: 100% 100%;
